# webcam-helper-nvda-addon

./: .pre-commit-config.yaml  buildVars.py  merge_pot.bat  pyproject.toml  readme.md
.github/workflows/: build_addon.yml
addon/doc/es/: readme.md
addon/doc/ru/: readme.md
addon/doc/uk/: readme.md
addon/doc/zh_CN/: readme.md
addon/globalPlugins/webcamHelper/: __init__.py
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/uk/LC_MESSAGES/: nvda.po
addon/locale/zh_CN/LC_MESSAGES/: nvda.po
